<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true"
    android:fillViewport="false"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:paddingLeft="@dimen/md_keylines_x6"
            android:paddingRight="@dimen/md_keylines_x6">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/md_keylines_x4"
                android:checkedButton="@+id/radio_student"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teacher"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/fullname" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/confirm_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines_x3"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/classid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/classid" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_height"
                android:layout_marginTop="@dimen/md_keylines_x2"
                android:layout_marginBottom="@dimen/md_keylines_x2"
                android:scrollbars="horizontal"
                android:scrollbarStyle="outsideInset" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines_x4"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="@dimen/md_keylines_x5"
                app:cardElevation="@dimen/md_keylines">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:padding="@dimen/md_keylines_x3"
                        android:text="@string/signup" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>