...
                android:textColor="?attr/colorAccent"
                android:text="@string/description"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/game_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/lorem_ipsum" />

            <TextView
                android:layout_width="match_parent"
...
                android:id="@+id/game_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+1"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines_x3"
                android:background="?android:selectableItemBackground"
                android:onClick="play"
                android:visibility="invisible"
...
